--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -59,6 +59,13 @@ The abstract should be placed at the top left column and should contain about 15
  \label{fig:example}
 \end{figure}
 
+Keypoints
+*Code is clean with the help of numpy/scipy on the Python end and d3.js on the Javascript end, but it can be treated as a blackbox
+*Not beat-synchronous
+*Relies on similarity network fusion, which is simpler than diagonal promotion, etc
+*Amenable to many different types of visualization
+*Future work: exploring structure for audio cover song identification, similar to \cite{kinnaird2016aligned} on symbolic cover song identification
+
 % For bibtex users:
 \bibliography{main}
 
