Working on paper

--- a/Paper/main.bib
+++ b/Paper/main.bib
@@ -68,3 +68,12 @@
   author={Bendich, Paul and Gasparovic, Ellen and Harer, John and Tralie, Christopher},
   year = {2016}
 }
+
+@article{bostock2012d3,
+  title={D3. js},
+  author={Bostock, Michael and others},
+  journal={Data Driven Documents},
+  volume={492},
+  pages={701},
+  year={2012}
+}
