Submitted version of abstract

--- a/Paper/main.bib
+++ b/Paper/main.bib
@@ -77,3 +77,46 @@
   pages={701},
   year={2012}
 }
+
+@article{serra2009cross,
+  title={Cross recurrence quantification for cover song identification},
+  author={Serra, Joan and Serra, Xavier and Andrzejak, Ralph G},
+  journal={New Journal of Physics},
+  volume={11},
+  number={9},
+  pages={093017},
+  year={2009},
+  publisher={IOP Publishing}
+}
+
+@article{tralie2017quasi,
+author = {Christopher J. Tralie and Jose A. Perea},
+title = {(Quasi)Periodicity Quantification in Video Data, Using Topology},
+journal = {SIAM Journal on Imaging Sciences},
+volume = {11},
+number = {2},
+pages = {1049-1077},
+year = {2018},
+doi = {10.1137/17M1150736},
+
+URL = { 
+        https://doi.org/10.1137/17M1150736
+    
+},
+eprint = { 
+        https://doi.org/10.1137/17M1150736
+    
+}
+}
+@Article{Chen2017CSFusion,
+author="Chen, Ning
+and Li, Wei
+and Xiao, Haidong",
+title="Fusing similarity functions for cover song identification",
+journal="Multimedia Tools and Applications",
+year="2017",
+pages="1--24",
+issn="1573-7721",
+doi="10.1007/s11042-017-4456-9",
+url="http://dx.doi.org/10.1007/s11042-017-4456-9"
+}
