--- a/Paper_ICASSP/main.tex
+++ b/Paper_ICASSP/main.tex
@@ -33,7 +33,7 @@
 	{Duke University\\
 	Department of Mathematics\\
 	Durham, NC, USA}
-  {Brian McFee \sthanks{B. McFee was supported by ... }}%\sthanks{The fourth author performed the work
+  {Brian McFee}%\sthanks{The fourth author performed the work
 	%while at ...}}
 	{New York University\\
 	Music and Audio Research Lab \& Center for Data Science\\
