The rest of the code I used to make figures

--- a/SSMFigures.ipynb
+++ b/SSMFigures.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SongStructure import *\n",
+    "import SongStructure\n",
+    "import importlib\n",
+    "from Laplacian import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import argparse\n",
@@ -106,7 +108,103 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lapfn = getRandomWalkLaplacianEigsDense\n",
+    "specfn = lambda v, dim, times: spectralClusterSequential(v, dim, times, rownorm=False)\n",
+    "sr=22050\n",
+    "hop_length=512\n",
+    "win_fac=10\n",
+    "wins_per_block=20\n",
+    "K=3\n",
+    "reg_diag=1.0\n",
+    "reg_neighbs=0.0\n",
+    "niters=10\n",
+    "neigs=10\n",
+    "\n",
+    "Ws = res[\"Ws\"]\n",
+    "times = res[\"times\"]\n",
+    "vs = {name:lapfn(Ws[name])[:, 1:neigs+1] for name in Ws}\n",
+    "alllabels = {name:[specfn(vs[name], k, times) for k in range(2, neigs+1)] for name in Ws}\n",
+    "#print(\"Elapsed time spectral clustering: %.3g\"%(time.time()-tic))\n",
+    "specintervals_hier = {name:[res['intervals_hier'] for res in alllabels[name]] for name in alllabels}\n",
+    "speclabels_hier = {name:[res['labels_hier'] for res in alllabels[name]] for name in alllabels}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(SongStructure)\n",
+    "#FeatureOrder = ['Chromas', 'MFCCs', 'Fused MFCC/Chroma', 'CREMA', 'Tempogram', 'Fused']\n",
+    "FeatureOrder = ['Chromas']\n",
+    "for l in range(8):\n",
+    "    levels = [l]\n",
+    "    SongStructure.plotFusionResults(Ws, vs, alllabels, times, opt.win_fac, FeatureOrder=FeatureOrder, levels=levels)#, specintervals_hier, speclabels_hier)\n",
+    "    plt.savefig(\"ClusterLevel%i.png\"%l, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y, sr = librosa.load(\"MJ.mp3\", sr=22050)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Segment out song based on clusters from fused Chroma/MFCC\n",
+    "ls = alllabels['Fused MFCC/Chroma']\n",
+    "ls = [l['labels'] for l in [ls[3], ls[6]]]\n",
+    "print(ls[0].shape)\n",
+    "print(sr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.io import wavfile\n",
+    "plt.figure(figsize=(12, 2))\n",
+    "for i, l in enumerate(ls):\n",
+    "    l = np.array(l) + 1\n",
+    "    l[0] = np.max(l)+1\n",
+    "    plt.clf()\n",
+    "    plt.imshow(l[None, :], cmap='gray', aspect='auto')\n",
+    "    plt.axis('off')\n",
+    "    plt.savefig(\"Division%i.png\"%i, bbox_inches='tight')\n",
+    "    for k in np.unique(l):\n",
+    "        i1 = np.argmax(l == k)\n",
+    "        i2 = np.argmin(l[i1::] == k) + i1\n",
+    "        i1 *= 5120\n",
+    "        i2 *= 5120\n",
+    "        print(i, i1, i2)\n",
+    "        x = y[i1:i2]\n",
+    "        wavfile.write(\"MJ_%i_%i.wav\"%(i, k), sr, x)\n",
+    "        \n",
+    "        plt.clf()\n",
+    "        plt.imshow(l[None, :], cmap='magma_r', aspect='auto')\n",
+    "        plt.axis('off')\n",
+    "        lk = np.array(l)\n",
+    "        lk[np.abs(lk-k) > 0] = 0\n",
+    "        lk[lk > 0] = 255\n",
+    "        lk[lk == 0] = 0\n",
+    "        lk = 255-lk\n",
+    "        lk = np.array(lk[None, :, None], dtype=int)\n",
+    "        lk = np.concatenate((lk, lk, lk, lk), axis=2)\n",
+    "        plt.imshow(lk, aspect='auto')\n",
+    "        plt.axis('off')\n",
+    "        plt.savefig(\"Division%i_%i.png\"%(i, k), bbox_inches='tight')"
+   ]
   }
  ],
  "metadata": {
